--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@jsiebern/bs-material-ui": "^1.1.0-hooks.3",
+    "@material-ui/core": "^3.9.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "reason-react": ">=0.7.0"
