--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,9 @@
 
-# Created by https://www.gitignore.io/api/vim,node,emacs,linux,macos,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=vim,node,emacs,linux,macos,visualstudiocode
-
-### Emacs ###
-# -*- mode: gitignore; -*-
-*~
-\#*\#
-/.emacs.desktop
-/.emacs.desktop.lock
-*.elc
-auto-save-list
-tramp
-.\#*
-
-# Org-mode
-.org-id-locations
-*_archive
-
-# flymake-mode
-*_flymake.*
-
-# eshell files
-/eshell/history
-/eshell/lastdir
-
-# elpa packages
-/elpa/
-
-# reftex files
-*.rel
-
-# AUCTeX auto folder
-/auto/
-
-# cask packages
-.cask/
-dist/
-
-# Flycheck
-flycheck_*.el
-
-# server auth directory
-/server/
-
-# projectiles files
-.projectile
-
-# directory configuration
-.dir-locals.el
-
-# network security
-/network-security.data
-
+# Created by https://www.gitignore.io/api/vim,node,linux,macos,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=vim,node,linux,macos,visualstudiocode
 
 ### Linux ###
+*~
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
@@ -210,4 +160,4 @@ tags
 # Ignore all local history of files
 .history
 
-# End of https://www.gitignore.io/api/vim,node,emacs,linux,macos,visualstudiocode
+# End of https://www.gitignore.io/api/vim,node,linux,macos,visualstudiocode
