--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A very reasonable (and early alpha) map for the codam clusters",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "dev": "nodemon",
+    "build": "next build && tsc && tsc --project tsconfig.server.json",
+    "start": "NODE_ENV=production node .next/server"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,18 @@
   },
   "homepage": "https://github.com/nloomans/codam-mapper#readme",
   "dependencies": {
-    "@types/next": "^8.0.4",
-    "@zeit/next-typescript": "^1.1.1",
+    "express": "^4.16.4",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.1",
+    "@types/next": "^8.0.4",
+    "@types/react": "^16.8.14",
+    "@zeit/next-typescript": "^1.1.1",
+    "nodemon": "^1.18.11",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.5"
   }
 }
