--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "next build && tsc && tsc --project tsconfig.server.json",
-    "start": "NODE_ENV=production node .next/server"
+    "start": "NODE_ENV=production node -r dotenv/config .next/server"
   },
   "repository": {
     "type": "git",
@@ -19,15 +19,25 @@
   },
   "homepage": "https://github.com/nloomans/codam-mapper#readme",
   "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "http-link-header": "^1.0.2",
     "next": "^8.1.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "simple-oauth2": "^2.2.1",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/http-link-header": "^0.6.2",
     "@types/next": "^8.0.4",
     "@types/react": "^16.8.14",
+    "@types/simple-oauth2": "^2.2.1",
+    "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32",
     "@zeit/next-typescript": "^1.1.1",
     "nodemon": "^1.18.11",
     "ts-node": "^8.1.0",
