feat: login using passport.js

--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   "homepage": "https://github.com/nloomans/codam-marauders-map#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "http-link-header": "^1.0.2",
     "next": "^8.1.0",
+    "passport": "^0.4.0",
+    "passport-42": "^1.2.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "simple-oauth2": "^2.2.1",
@@ -31,9 +36,13 @@
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.1",
+    "@types/express-session": "^1.15.12",
     "@types/http-link-header": "^1.0.0",
     "@types/next": "^8.0.4",
+    "@types/passport": "^1.0.0",
     "@types/react": "^16.8.14",
     "@types/simple-oauth2": "^2.2.1",
     "@types/socket.io": "^2.1.2",
