--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
+    "connect-redis": "^3.4.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -31,12 +32,14 @@
     "passport-42": "^1.2.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "redis": "^2.8.0",
     "simple-oauth2": "^2.2.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/connect-redis": "0.0.10",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
