--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^8.1.0",
     "passport": "^0.4.0",
     "passport-42": "^1.2.5",
+    "passport.socketio": "^3.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "redis": "^2.8.0",
