--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
+    "lint": "tslint --project tslint.json",
+    "lint:fix": "tslint --project tslint.json --fix",
     "build": "next build && tsc && tsc --project tsconfig.server.json",
     "start": "NODE_ENV=production node -r dotenv/config .next/server"
   },
@@ -54,6 +56,7 @@
     "@zeit/next-typescript": "^1.1.1",
     "nodemon": "^1.18.11",
     "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   }
 }
