--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/simple-oauth2": "^2.2.1",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
+    "@types/styled-jsx": "^2.2.8",
     "@zeit/next-typescript": "^1.1.1",
     "nodemon": "^1.18.11",
     "ts-node": "^8.1.0",
