--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "tslint --project tslint.json",
     "lint:fix": "tslint --project tslint.json --fix",
     "build": "next build && tsc && tsc --project tsconfig.server.json",
-    "start": "NODE_ENV=production node -r dotenv/config .next/server/server"
+    "start": "NODE_ENV=production node -r dotenv/config .next/server/server",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -47,6 +48,7 @@
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.12",
     "@types/http-link-header": "^1.0.0",
+    "@types/jest": "^24.0.13",
     "@types/next": "^8.0.5",
     "@types/passport": "^1.0.0",
     "@types/react": "^16.8.19",
@@ -55,7 +57,9 @@
     "@types/socket.io-client": "^1.4.32",
     "@types/styled-jsx": "^2.2.8",
     "@zeit/next-typescript": "^1.1.1",
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.2.0",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1"
