--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "lint": "tslint --project tslint.json",
-    "lint:fix": "tslint --project tslint.json --fix",
-    "build": "next build && tsc && tsc --project tsconfig.server.json",
+    "build": "next build",
     "start": "NODE_ENV=production node -r dotenv/config .next/server/server"
   },
   "repository": {
@@ -41,23 +39,6 @@
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.17.0",
-    "@types/connect-redis": "0.0.10",
-    "@types/cookie-parser": "^1.4.1",
-    "@types/express": "^4.17.0",
-    "@types/express-session": "^1.15.12",
-    "@types/http-link-header": "^1.0.0",
-    "@types/next": "^8.0.5",
-    "@types/passport": "^1.0.0",
-    "@types/react": "^16.8.19",
-    "@types/simple-oauth2": "^2.2.1",
-    "@types/socket.io": "^2.1.2",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/styled-jsx": "^2.2.8",
-    "@zeit/next-typescript": "^1.1.1",
-    "nodemon": "^1.19.1",
-    "ts-node": "^8.2.0",
-    "tslint": "^5.17.0",
-    "typescript": "^3.5.1"
+    "nodemon": "^1.19.1"
   }
 }
